# SpinnakerVideoCapture

./: .gitignore  README.md
c++/: .clang-format  CMakeLists.txt  cmakeVS2015_x64.bat  main.cpp  spincamera.cpp  spincamera.hpp  spinmanager.hpp
c++/SpinCap/: spincamera.cpp  spincamera.hpp  spinmanager.hpp
python/: PySpinCam_class.ipynb  capture.py  capture_test.ipynb
python/PySpinCap/: __init__.py  pyspincam.py  pyspinmanager.py
